Introduce AdGlide, an ad mediation library supporting multiple ad formats and networks, along with a demo application.